# OpenGL-Renderer

./: .gitignore  CMakeLists.txt
assets/shaders/gbuffer/: gbuffer.frag  gbuffer.vert
assets/shaders/lighting/: lighting.frag  lighting.vert
src/: CMakeLists.txt  Main.cpp
src/Components/: Components.hpp
src/Components/include/: CameraComponent.hpp  ControllerComponent.hpp  GlobalTransformComponent.hpp  MaterialOverrideComponent.hpp  MeshAssetComponent.hpp  MeshRendererComponent.hpp  ModelInstanceComponent.hpp  NameComponent.hpp  ProjectionComponent.hpp  RelationshioComponent.hpp  RelationshipComponent.hpp  TagComponent.hpp  TransformComponent.hpp
src/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Event.hpp  EventBus.hpp
src/Events/: CMakeLists.txt  Event.hpp  EventBus.hpp
src/Graphics/: AABB.hpp  Buffer.hpp  CMakeLists.txt  DataTypes.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsPipeline.hpp  IGLResource.hpp  MeshData.hpp  MeshView.hpp  Model.hpp  Primitive.cpp  Primitive.hpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  SamplerLibrary.hpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp  VertexData.hpp
src/Services/: CMakeLists.txt  IService.hpp  InputManagerService.cpp  InputManagerService.hpp  MeshFactoryService.hpp  MeshManagerService.cpp  MeshManagerService.hpp  ResourceLoaderService.cpp  ResourceLoaderService.hpp  SceneManagerService.cpp  SceneManagerService.hpp  ServiceLocator.hpp  ShaderManagerService.cpp  ShaderManagerService.hpp  SystemManagerService.cpp  SystemManagerService.hpp  TextureManagerService.cpp  TextureManagerService.hpp  TimerService.cpp  TimerService.hpp  WindowService.cpp  WindowService.hpp
src/Systems/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp  EditorUISystem.cpp  EditorUISystem.hpp  FlyCameraControllerSystem.cpp  FlyCameraControllerSystem.hpp  ISystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp
src/Utils/: DataBuffer.hpp  DataTypes.hpp  Error.hpp  Exception.hpp  Formatter.hpp  InRangeOf.hpp  Log.hpp  Overload.hpp  Singleton.hpp  StringMap.hpp  UniqueHandle.hpp  Utils.hpp
tests/: BufferTests.cpp  CMakeLists.txt  ErrorTests.cpp  UniqueHandleTests.cpp
third-patry/: CMakeLists.txt
third-patry/ImGuiFileDialog/: CMakeLists.txt
third-patry/ImGuizmo/: CMakeLists.txt
third-patry/glad/: CMakeLists.txt  glad.h
third-patry/imgui/: CMakeLists.txt
third-patry/stb_image/: CMakeLists.txt
